--- a/.drone.yml
+++ b/.drone.yml
@@ -10,4 +10,5 @@ steps:
 - name: greeting
   image: maze/drone-python
   commands:
-  - echo hello world
+    - python setup.py install
+    - echo hello world
